--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 <body>
   <h1>Upload Five9 IVR Files</h1>
   <form action="/upload" method="POST" enctype="multipart/form-data">
-    <input type="file" name="ivrfiles" multiple accept=".five9ivr,.xml" />
+    <input type="file" name="ivrfiles" multiple />
     <button type="submit">Upload and Process</button>
   </form>
 </body>
