--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,75 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>Upload Five9 IVR Files</title>
+  <style>
+    body {
+      background-color: #0d1a33;
+      color: #e6e6e6;
+      font-family: Consolas, monospace;
+      padding: 2em;
+    }
+
+    h1 {
+      color: #66ccff;
+    }
+
+    a {
+      color: #66ccff;
+      text-decoration: none;
+    }
+
+    a:hover {
+      color: #99ddff;
+      text-decoration: underline;
+    }
+
+    label {
+      font-weight: bold;
+      display: block;
+      margin-top: 1em;
+    }
+
+    input[type="text"], input[type="file"], textarea {
+      width: 100%;
+      padding: 0.6em;
+      font-family: monospace;
+      font-size: 0.95em;
+      color: #f0f0f0;
+      background-color: #1e2a45;
+      border: 1px solid #333;
+      border-radius: 4px;
+    }
+
+    textarea {
+      height: 300px;
+      resize: vertical;
+    }
+
+    button {
+      margin-top: 1em;
+      padding: 0.6em 1em;
+      font-size: 1em;
+      background-color: #336699;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #4477aa;
+    }
+
+    #summary {
+      margin-top: 2em;
+      background-color: #1e2a45;
+      padding: 1em;
+      white-space: pre-wrap;
+      border-left: 4px solid #336699;
+    }
+  </style>
 </head>
 <body>
   <h1>Upload Five9 IVR Files</h1>
