--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Upload Five9 IVR Files</title>
-  <style>
+  <link rel="stylesheet" href="/styles.css">
+<!--   <style>
     body {
       background-color: #0d1a33;
       color: #e6e6e6;
@@ -69,7 +70,7 @@
       white-space: pre-wrap;
       border-left: 4px solid #336699;
     }
-  </style>
+  </style> -->
 </head>
 <body>
   <h1>Upload Five9 IVR Files</h1>
