--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Upload Five9 IVR Files</title>
+  <title>Upload IVR Files</title>
   <link rel="stylesheet" href="/styles.css">
 <!--   <style>
     body {
@@ -73,7 +73,7 @@
   </style> -->
 </head>
 <body>
-  <h1>Upload Five9 IVR Files</h1>
+  <h1>Upload IVR Files</h1>
   <form action="/upload" method="POST" enctype="multipart/form-data">
     <input type="file" name="ivrfiles" multiple required />
     <button type="submit">Upload and Process</button>
