--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,16 @@
 </head>
 <body>
   <h1>Upload IVR Files</h1>
-  <form action="/upload" method="POST" enctype="multipart/form-data">
+<!--   <form action="/upload" method="POST" enctype="multipart/form-data">
     <input type="file" name="ivrfiles" multiple required />
     <button type="submit">Upload and Process</button>
-  </form>
+  </form> -->
+  <form action="/upload" method="POST" enctype="multipart/form-data">
+  <label class="file-button">
+    Choose Files
+    <input type="file" name="ivrfiles" multiple required hidden />
+  </label>
+  <button type="submit">Upload and Process</button>
+</form>
 </body>
 </html>
