--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,12 @@
     <button type="submit">Upload and Process</button>
   </form> -->
   <form action="/upload" method="POST" enctype="multipart/form-data">
-  <label class="file-button">
+<!--   <label class="file-button">
     Choose Files
     <input type="file" name="ivrfiles" multiple required hidden onchange="updateFileList(this)" />
-  </label>
+  </label> -->
+  <button type="button" class="file-button" onclick="document.getElementById('fileInput').click()">Choose Files</button>
+  <input type="file" id="fileInput" name="ivrfiles" multiple required hidden onchange="updateFileList(this)" />
   <span id="file-list" class="file-list-label">No files selected</span>
   <br />
   <button type="submit">Upload and Process</button>
