--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,10 @@
 
   <span id="file-list" class="file-list-label">No files selected</span>
   <br />
+  <label>
+    <input type="checkbox" name="includeFilename" value="1">
+    Include filename in diagram
+  </label>
   <button type="submit">Upload and Process</button>
 </form>
 <script>
