--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   <br />
   <label>
     <input type="checkbox" name="includeFilename" value="1">
-    Include filename in diagram
+    Include filename in diagram (SVG/PNG only)
   </label>
   <button type="submit">Upload and Process</button>
 </form>
